Make scrollbar but with hover bugs

--- a/src/assets/styles/pages/_board-index.scss
+++ b/src/assets/styles/pages/_board-index.scss
@@ -2,30 +2,58 @@
   height: calc(100vh - 48px);
   overflow-y: auto;
   overflow-x: hidden;
-  scrollbar-color: #7b7b7b #424242;
   scrollbar-width: auto;
 
   &::-webkit-scrollbar {
-    width: 10px; /* Slim width */
-
+    width: 15px; /* Slim width */
+    // height: 10px;
   }
 
   &::-webkit-scrollbar-track {
-    background-color: #2c333a; /* Transparent track */
+    background-color: #424242;
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: #2c333a;
-    border-radius: 6px;
-    transition: background-color 0.3s ease;     }
+    background-color: #686868;
+    transition: background-color 0.3s ease;
+    border: 2px solid #424242;
+    position: relative;
+    z-index: 10000;
+  }
 
   &::-webkit-scrollbar-thumb:hover {
-    background-color: #7b7b7b; /* Slightly darker grey on hover */
+    background-color: #7b7b7b !important;
   }
 
   &::-webkit-scrollbar-thumb:active {
-    background-color: #a1a1a1; 
+    background-color: #bbb7b7;
   }
+
+  // &::-webkit-scrollbar-button {
+  //   height: 14px;
+  //   width: 24px;
+  //   background-color: #424242;
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: center;
+  // }
+
+  // .svg-scroolbar {
+  //   display: flex;
+  //   flex-direction: column;
+  //   height: calc(100vh - 26px);
+  //   padding-block: 5px;
+  //   justify-content: space-between;
+  //   position: fixed;
+  //   top: 37px;
+  //   right: 0;
+  //   color: #6b6b6b;
+  //   background-color: transparent;
+  //   svg{
+  //     width: 15px;
+  //   }
+  // }
+
   .board-conainer {
     align-items: flex-start;
     display: flex;
@@ -89,8 +117,6 @@
               margin-inline-start: 5px;
               vertical-align: top;
               font-size: 12px;
-
-          
             }
           }
         }
@@ -137,16 +163,13 @@
               overflow: hidden;
               text-overflow: ellipsis;
               white-space: nowrap;
-              color:  $app-title;
+              color: $app-title;
             }
           }
         }
       }
     }
-
   }
-
-
 }
 
 .saparete-boards {
